# ORDINA

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  layer_proposal.yml
.github/workflows/: ci.yml
data/disease_mapping/: README.md  build_mondo_mapping.py  disbiome_mondo_mapping.tsv
docs/: 00_vision_and_positioning.md  01_mind_data_foundation.md  02_retes_multiplex_model.md  03_layer_factory_and_catalog.md  04_analysis_and_discovery.md  05_validation.md  06_open_questions.md  07_stack.md  08_decisions.md  09_recovery_metric.md  10_architecture_and_roadmap.md  refs.md
